bk_ida/gccida/c3/copy_rtx_if_shared
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/copy_rtx_if_shared/src/emit-rtl.c:3028:23: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v7.rtwint = ( __int64)orig->fld[0]; 
                      ^~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/copy_rtx_if_shared/src/emit-rtl.c:3042:20: error: use of undeclared identifier 'rtx_code'; did you mean 'rtx_cost'?
v17 = rtx_alloc( ( rtx_code)( unsigned __int16)v2); 
                   ^~~~~~~~
                   rtx_cost
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/copy_rtx_if_shared/src/rtl.h:1787:12: note: 'rtx_cost' declared here
extern int rtx_cost                     PARAMS ((rtx, enum rtx_code));
           ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/copy_rtx_if_shared/src/emit-rtl.c:3042:31: error: expected expression
v17 = rtx_alloc( ( rtx_code)( unsigned __int16)v2); 
                              ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/copy_rtx_if_shared/src/emit-rtl.c:3081:18: error: expected expression
v35 = *( _OWORD *)&rtwint[2 * v33 + 6]; 
                 ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/copy_rtx_if_shared/src/emit-rtl.c:3081:10: error: use of undeclared identifier '_OWORD'
v35 = *( _OWORD *)&rtwint[2 * v33 + 6]; 
         ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/copy_rtx_if_shared/src/emit-rtl.c:3083:12: error: expected expression
*( _OWORD *)v25[v33 / 2 + 1].elem = v35; 
           ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/copy_rtx_if_shared/src/emit-rtl.c:3083:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)v25[v33 / 2 + 1].elem = v35; 
   ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/copy_rtx_if_shared/src/emit-rtl.c:3084:18: error: expected expression
v36 = *( _OWORD *)&rtwint[2 * v33 + 14]; 
                 ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/copy_rtx_if_shared/src/emit-rtl.c:3084:10: error: use of undeclared identifier '_OWORD'
v36 = *( _OWORD *)&rtwint[2 * v33 + 14]; 
         ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/copy_rtx_if_shared/src/emit-rtl.c:3086:12: error: expected expression
*( _OWORD *)v25[v33 / 2 + 3].elem = v36; 
           ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/copy_rtx_if_shared/src/emit-rtl.c:3086:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)v25[v33 / 2 + 3].elem = v36; 
   ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/copy_rtx_if_shared/src/emit-rtl.c:3087:18: error: expected expression
v37 = *( _OWORD *)&rtwint[2 * v33 + 22]; 
                 ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/copy_rtx_if_shared/src/emit-rtl.c:3087:10: error: use of undeclared identifier '_OWORD'
v37 = *( _OWORD *)&rtwint[2 * v33 + 22]; 
         ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/copy_rtx_if_shared/src/emit-rtl.c:3089:12: error: expected expression
*( _OWORD *)v25[v33 / 2 + 5].elem = v37; 
           ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/copy_rtx_if_shared/src/emit-rtl.c:3089:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)v25[v33 / 2 + 5].elem = v37; 
   ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/copy_rtx_if_shared/src/emit-rtl.c:3090:18: error: expected expression
v38 = *( _OWORD *)&rtwint[2 * v33 + 30]; 
                 ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/copy_rtx_if_shared/src/emit-rtl.c:3090:10: error: use of undeclared identifier '_OWORD'
v38 = *( _OWORD *)&rtwint[2 * v33 + 30]; 
         ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/copy_rtx_if_shared/src/emit-rtl.c:3092:12: error: expected expression
*( _OWORD *)v25[v33 / 2 + 7].elem = v38; 
           ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/copy_rtx_if_shared/src/emit-rtl.c:3092:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)v25[v33 / 2 + 7].elem = v38; 
   ^
19 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/copy_rtx_if_shared/src/obj/emit-rtl.o] Error 1
